--- a/chart_challenge/templates/index.html
+++ b/chart_challenge/templates/index.html
@@ -1,10 +1,47 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Tax Chart</title>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static "js/highcharts.js" %}"></script>
+
+    <script>
+        $(function() {
+            $('#chart-box').highcharts({
+                chart: {
+                    type: 'line'
+                },
+                title: {
+                    text: 'A moeda {{ from }} na última semana'
+                },
+                xAxis: {
+                    categories:  {{ days_list|safe }},
+                    title: 'Última semana'
+                },
+                yAxis: {
+                    title: {
+                        text: 'Variação'
+                    }
+                },
+               legend: {
+                    layout: 'vertical',
+                    align: 'right',
+                    verticalAlign: 'middle',
+                    borderWidth: 0
+                },
+                series: [{
+                    name: '{{ from }}',
+                    data: [{{ rates_list|join:", " }}]
+                }]
+            });
+        });
+    </script>
 </head>
 <body>
-
+    <!-- I know that style inside a tag is ugly but it's better for performance e for user experience ;) -->
+    <div id="chart-box" class="chart" style="width:100%;height:400px;"></div>
 </body>
 </html>
