--- a/chart_challenge/templates/index.html
+++ b/chart_challenge/templates/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tax Chart</title>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static "js/jquery-1.8.2.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/highcharts.js" %}"></script>
 
     <script>
