--- a/chart_challenge/templates/index.html
+++ b/chart_challenge/templates/index.html
@@ -7,7 +7,7 @@
     <title>Tax Chart</title>
     <script type="text/javascript" src="{% static "js/jquery-1.8.2.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/highcharts.js" %}"></script>
-
+    <link rel="stylesheet" href="{% static "css/stylesheet.css" %}">
     <script>
         $(function() {
             $('#chart-box').highcharts({
@@ -43,5 +43,10 @@
 <body>
     <!-- I know that style inside a tag is ugly but it's better for performance e for user experience ;) -->
     <div id="chart-box" class="chart" style="width:100%;height:400px;"></div>
+    <ul class="currency-list">
+        <li class="currency-item"><a class="currency" href="/?currency=usd">Dólar - USD</a></li>
+        <li class="currency-item"><a class="currency" href="/?currency=eur">Euro - EUR</a></li>
+        <li class="currency-item"><a class="currency" href="/?currency=ars">Peso Argentino - ARS</a></li>
+    </ul>
 </body>
 </html>
